methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:7: error: Unmatched closing brace '}' ignored here
       baisseBrosse()}
                     ^SlugSnail:9: error: ';' expected but 'else' found.
       else
       ^