methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
     while(!estSurBiscuit){
       leveBrosse()
       if(isFacingTrail(c)){}
         avance()
       baisseBrosse()}
       
       else
       	 gauche()
     }
 }

def isFacingTrail(c:Color):Boolean = {
  if(estFaceMur()){
    return false
  }
  avance()
  if(getCouleurSol()==c){
    recule()
    return true
  }
  else{
    recule()
    return false
  }
  }